code/SigmaExcel/obj/Release/SigmaExcelParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\38099\Desktop\Data\Study\2_year\Lab1Excel\code\SigmaExcel\SigmaExcel.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace SigmaExcel {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class SigmaExcelParser : Parser {
	public const int
		INT=1, FLOAT=2, LPAREN=3, RPAREN=4, SEP=5, MUL=6, DIV=7, ADD=8, SUB=9, 
		EXP=10, MOD=11, IDIV=12, MAX=13, MIN=14, ABS=15, SIN=16, COS=17, TAN=18, 
		COT=19, WS=20;
	public const int
		RULE_compileUnit = 0, RULE_decimal = 1, RULE_expr = 2;
	public static readonly string[] ruleNames = {
		"compileUnit", "decimal", "expr"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'('", "')'", null, "'*'", "'/'", "'+'", "'-'", null, 
		"'mod'", "'div'", "'max'", "'min'", "'abs'", "'sin'", "'cos'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "INT", "FLOAT", "LPAREN", "RPAREN", "SEP", "MUL", "DIV", "ADD", 
		"SUB", "EXP", "MOD", "IDIV", "MAX", "MIN", "ABS", "SIN", "COS", "TAN", 
		"COT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SigmaExcel.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public SigmaExcelParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(SigmaExcelParser.Eof, 0); }
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 6; expr(0);
			State = 7; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DecimalContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(SigmaExcelParser.INT, 0); }
		public ITerminalNode FLOAT() { return GetToken(SigmaExcelParser.FLOAT, 0); }
		public DecimalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decimal; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterDecimal(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitDecimal(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecimal(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DecimalContext @decimal() {
		DecimalContext _localctx = new DecimalContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_decimal);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 9;
			_la = _input.La(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ParenthesisContext : ExprContext {
		public ITerminalNode LPAREN() { return GetToken(SigmaExcelParser.LPAREN, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(SigmaExcelParser.RPAREN, 0); }
		public ParenthesisContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterParenthesis(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitParenthesis(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParenthesis(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TrigonometricalContext : ExprContext {
		public IToken op;
		public ITerminalNode LPAREN() { return GetToken(SigmaExcelParser.LPAREN, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(SigmaExcelParser.RPAREN, 0); }
		public ITerminalNode SIN() { return GetToken(SigmaExcelParser.SIN, 0); }
		public ITerminalNode COS() { return GetToken(SigmaExcelParser.COS, 0); }
		public ITerminalNode TAN() { return GetToken(SigmaExcelParser.TAN, 0); }
		public ITerminalNode COT() { return GetToken(SigmaExcelParser.COT, 0); }
		public TrigonometricalContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterTrigonometrical(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitTrigonometrical(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTrigonometrical(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AbsContext : ExprContext {
		public IToken op;
		public ITerminalNode LPAREN() { return GetToken(SigmaExcelParser.LPAREN, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(SigmaExcelParser.RPAREN, 0); }
		public ITerminalNode ABS() { return GetToken(SigmaExcelParser.ABS, 0); }
		public AbsContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterAbs(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitAbs(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAbs(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumberContext : ExprContext {
		public DecimalContext @decimal() {
			return GetRuleContext<DecimalContext>(0);
		}
		public NumberContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterNumber(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitNumber(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MulDivContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode MUL() { return GetToken(SigmaExcelParser.MUL, 0); }
		public ITerminalNode DIV() { return GetToken(SigmaExcelParser.DIV, 0); }
		public MulDivContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterMulDiv(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitMulDiv(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMulDiv(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AddSubContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode ADD() { return GetToken(SigmaExcelParser.ADD, 0); }
		public ITerminalNode SUB() { return GetToken(SigmaExcelParser.SUB, 0); }
		public AddSubContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterAddSub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitAddSub(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAddSub(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ModIDivContext : ExprContext {
		public IToken op;
		public ITerminalNode LPAREN() { return GetToken(SigmaExcelParser.LPAREN, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode SEP() { return GetToken(SigmaExcelParser.SEP, 0); }
		public ITerminalNode RPAREN() { return GetToken(SigmaExcelParser.RPAREN, 0); }
		public ITerminalNode MOD() { return GetToken(SigmaExcelParser.MOD, 0); }
		public ITerminalNode IDIV() { return GetToken(SigmaExcelParser.IDIV, 0); }
		public ModIDivContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterModIDiv(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitModIDiv(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModIDiv(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExponentialContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode EXP() { return GetToken(SigmaExcelParser.EXP, 0); }
		public ExponentialContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterExponential(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitExponential(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExponential(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MaxMinContext : ExprContext {
		public IToken op;
		public ITerminalNode LPAREN() { return GetToken(SigmaExcelParser.LPAREN, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode RPAREN() { return GetToken(SigmaExcelParser.RPAREN, 0); }
		public ITerminalNode MAX() { return GetToken(SigmaExcelParser.MAX, 0); }
		public ITerminalNode MIN() { return GetToken(SigmaExcelParser.MIN, 0); }
		public ITerminalNode[] SEP() { return GetTokens(SigmaExcelParser.SEP); }
		public ITerminalNode SEP(int i) {
			return GetToken(SigmaExcelParser.SEP, i);
		}
		public MaxMinContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterMaxMin(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitMaxMin(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMaxMin(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnaryContext : ExprContext {
		public IToken op;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode ADD() { return GetToken(SigmaExcelParser.ADD, 0); }
		public ITerminalNode SUB() { return GetToken(SigmaExcelParser.SUB, 0); }
		public UnaryContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.EnterUnary(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISigmaExcelListener typedListener = listener as ISigmaExcelListener;
			if (typedListener != null) typedListener.ExitUnary(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISigmaExcelVisitor<TResult> typedVisitor = visitor as ISigmaExcelVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnary(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}

	private ExprContext expr(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case LPAREN:
				{
				_localctx = new ParenthesisContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				State = 12; Match(LPAREN);
				State = 13; expr(0);
				State = 14; Match(RPAREN);
				}
				break;
			case ADD:
			case SUB:
				{
				_localctx = new UnaryContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				State = 16;
				((UnaryContext)_localctx).op = _input.Lt(1);
				_la = _input.La(1);
				if ( !(_la==ADD || _la==SUB) ) {
					((UnaryContext)_localctx).op = _errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				State = 17; expr(8);
				}
				break;
			case MOD:
			case IDIV:
				{
				_localctx = new ModIDivContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				State = 18;
				((ModIDivContext)_localctx).op = _input.Lt(1);
				_la = _input.La(1);
				if ( !(_la==MOD || _la==IDIV) ) {
					((ModIDivContext)_localctx).op = _errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				State = 19; Match(LPAREN);
				State = 20; expr(0);
				State = 21; Match(SEP);
				State = 22; expr(0);
				State = 23; Match(RPAREN);
				}
				break;
			case MAX:
			case MIN:
				{
				_localctx = new MaxMinContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				State = 25;
				((MaxMinContext)_localctx).op = _input.Lt(1);
				_la = _input.La(1);
				if ( !(_la==MAX || _la==MIN) ) {
					((MaxMinContext)_localctx).op = _errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				State = 26; Match(LPAREN);
				State = 27; expr(0);
				State = 30;
				_errHandler.Sync(this);
				_la = _input.La(1);
				do {
					{
					{
					State = 28; Match(SEP);
					State = 29; expr(0);
					}
					}
					State = 32;
					_errHandler.Sync(this);
					_la = _input.La(1);
				} while ( _la==SEP );
				State = 34; Match(RPAREN);
				}
				break;
			case ABS:
				{
				_localctx = new AbsContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				State = 36; ((AbsContext)_localctx).op = Match(ABS);
				State = 37; Match(LPAREN);
				State = 38; expr(0);
				State = 39; Match(RPAREN);
				}
				break;
			case SIN:
			case COS:
			case TAN:
			case COT:
				{
				_localctx = new TrigonometricalContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				State = 41;
				((TrigonometricalContext)_localctx).op = _input.Lt(1);
				_la = _input.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SIN) | (1L << COS) | (1L << TAN) | (1L << COT))) != 0)) ) {
					((TrigonometricalContext)_localctx).op = _errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				State = 42; Match(LPAREN);
				State = 43; expr(0);
				State = 44; Match(RPAREN);
				}
				break;
			case INT:
			case FLOAT:
				{
				_localctx = new NumberContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				State = 46; @decimal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.Lt(-1);
			State = 60;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 58;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new ExponentialContext(new ExprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 49;
						if (!(Precpred(_ctx, 9))) throw new FailedPredicateException(this, "Precpred(_ctx, 9)");
						State = 50; ((ExponentialContext)_localctx).op = Match(EXP);
						State = 51; expr(10);
						}
						break;

					case 2:
						{
						_localctx = new MulDivContext(new ExprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 52;
						if (!(Precpred(_ctx, 7))) throw new FailedPredicateException(this, "Precpred(_ctx, 7)");
						State = 53;
						((MulDivContext)_localctx).op = _input.Lt(1);
						_la = _input.La(1);
						if ( !(_la==MUL || _la==DIV) ) {
							((MulDivContext)_localctx).op = _errHandler.RecoverInline(this);
						} else {
							if (_input.La(1) == TokenConstants.Eof) {
								matchedEOF = true;
							}

							_errHandler.ReportMatch(this);
							Consume();
						}
						State = 54; expr(8);
						}
						break;

					case 3:
						{
						_localctx = new AddSubContext(new ExprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 55;
						if (!(Precpred(_ctx, 6))) throw new FailedPredicateException(this, "Precpred(_ctx, 6)");
						State = 56;
						((AddSubContext)_localctx).op = _input.Lt(1);
						_la = _input.La(1);
						if ( !(_la==ADD || _la==SUB) ) {
							((AddSubContext)_localctx).op = _errHandler.RecoverInline(this);
						} else {
							if (_input.La(1) == TokenConstants.Eof) {
								matchedEOF = true;
							}

							_errHandler.ReportMatch(this);
							Consume();
						}
						State = 57; expr(7);
						}
						break;
					}
					} 
				}
				State = 62;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public override bool Sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 2: return expr_sempred((ExprContext)_localctx, predIndex);
		}
		return true;
	}
	private bool expr_sempred(ExprContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return Precpred(_ctx, 9);

		case 1: return Precpred(_ctx, 7);

		case 2: return Precpred(_ctx, 6);
		}
		return true;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
} // namespace SigmaExcel
